Feature/ubicacion con coordenada (#60)
* subo ubicacion con coordenada

* correccion coordenadas

* subo test de ubicacion service con sus tests pasando

* cambio en la arquitectura de coordenadas, se agrego generador de coordenada en medium/espiritu, falta corregir test

* test resueltos

---------

Co-authored-by: Jere Zarza <jerezarza98@gmail.com>